test/integration/statsFormatter/statsCasesFixture/babel-loader-syntax-error/errors.webpack-4.txt
Error in ./entry.js

  Module build failed (from Cdir/node_modules/babel-loader/lib/index.js):
  SyntaxError: Unexpected token (2:0)
  
    1 | const x = {
  > 2 | 
      | ^